--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "server": "json-server --watch db.json --port 3004"
+    "server": "json-server --watch db.json --port 3004 --id isbn"
   },
   "dependencies": {
     "axios": "^0.27.2",
