--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "server": "json-server --watch db.json --port 3004 --id isbn"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^0.27.2",
     "final-form": "^4.20.7",
-    "json-server": "^0.17.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-final-form": "^6.5.9",
